add manually control node

--- a/challange/code/src/controller_pkg/CMakeLists.txt
+++ b/challange/code/src/controller_pkg/CMakeLists.txt
@@ -20,6 +20,11 @@ find_package(catkin REQUIRED COMPONENTS
   mav_msgs
   eigen_conversions
   tf_conversions
+  cv_bridge
+  image_transport
+  sensor_msgs
+  pcl_ros
+  pcl_conversions
 )
 
 catkin_package(CATKIN_DEPENDS 
@@ -29,19 +34,32 @@ catkin_package(CATKIN_DEPENDS
   tf
   eigen_conversions
   tf_conversions
+  cv_bridge
+  image_transport
+  sensor_msgs
+  pcl_ros
+  pcl_conversions
 )
 
 find_package(Eigen3)
 
 include_directories(${catkin_INCLUDE_DIRS})
+
 add_executable(controller_node src/controller_node.cpp)
 add_dependencies(controller_node ${catkin_EXPORTED_TARGETS})
-
 target_link_libraries(controller_node ${catkin_LIBRARIES})
 
 add_executable(traj_publisher src/traj_publisher.cpp)
 add_dependencies(traj_publisher ${catkin_EXPORTED_TARGETS})
 target_link_libraries(traj_publisher ${catkin_LIBRARIES})
+
+add_executable(sem_img_proc_node src/sem_img_proc_node.cpp)
+add_dependencies(sem_img_proc_node ${catkin_EXPORTED_TARGETS})
+target_link_libraries(sem_img_proc_node ${catkin_LIBRARIES})
+
+add_executable(convert_unit_node src/convert_unit_node.cpp)
+add_dependencies(convert_unit_node ${catkin_EXPORTED_TARGETS})
+target_link_libraries(convert_unit_node ${catkin_LIBRARIES})
 
 add_executable(keyboard_node src/keyboard_node.cpp)
 add_dependencies(keyboard_node ${catkin_EXPORTED_TARGETS})
