--- a/challange/code/src/controller_pkg/CMakeLists.txt
+++ b/challange/code/src/controller_pkg/CMakeLists.txt
@@ -61,10 +61,10 @@ add_executable(convert_unit_node src/convert_unit_node.cpp)
 add_dependencies(convert_unit_node ${catkin_EXPORTED_TARGETS})
 target_link_libraries(convert_unit_node ${catkin_LIBRARIES})
 
-add_executable(keyboard_node src/keyboard_node.cpp)
-add_dependencies(keyboard_node ${catkin_EXPORTED_TARGETS})
-target_link_libraries(keyboard_node ${catkin_LIBRARIES})
+add_executable(keyboard_traj_node src/keyboard_traj_node.cpp)
+add_dependencies(keyboard_traj_node ${catkin_EXPORTED_TARGETS})
+target_link_libraries(keyboard_traj_node ${catkin_LIBRARIES})
 
-add_executable(traj_pub_node src/traj_pub_node.cpp)
-add_dependencies(traj_pub_node ${catkin_EXPORTED_TARGETS})
-target_link_libraries(traj_pub_node ${catkin_LIBRARIES})
+add_executable(keyboard_traj_node src/keyboard_traj_node.cpp)
+add_dependencies(keyboard_traj_node ${catkin_EXPORTED_TARGETS})
+target_link_libraries(keyboard_traj_node ${catkin_LIBRARIES})
