--- a/image_converter_node/CMakeLists.txt
+++ b/image_converter_node/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.0.0)
 project(image_converter_node)
 
-## Compile as C++11, supported in ROS Noetic
+# Set C++11 (required by ROS Noetic)
 add_compile_options(-std=c++11)
 
 find_package(catkin REQUIRED COMPONENTS
@@ -11,13 +11,14 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   tf2_ros
   geometry_msgs
-)# Find OpenCV and Eigen3 packages
+  visualization_msgs
+)
+
 find_package(OpenCV REQUIRED)
 find_package(Eigen3 REQUIRED)
 
-
 catkin_package(
-  CATKIN_DEPENDS roscpp image_transport cv_bridge sensor_msgs tf2_ros geometry_msgs
+  CATKIN_DEPENDS roscpp image_transport cv_bridge sensor_msgs tf2_ros geometry_msgs visualization_msgs
   DEPENDS OpenCV Eigen3
 )
 
@@ -27,8 +28,7 @@ include_directories(
   ${EIGEN3_INCLUDE_DIRS}
 )
 
-# Build the image_converter_node executable
+# Build the executable node from source
 add_executable(sem_img_proc_node src/sem_img_proc_node.cpp)
 add_dependencies(sem_img_proc_node ${catkin_EXPORTED_TARGETS})
 target_link_libraries(sem_img_proc_node ${catkin_LIBRARIES})
-
