--- a/image_converter_node/package.xml
+++ b/image_converter_node/package.xml
@@ -7,21 +7,27 @@
   <maintainer email="weili.tang@tum.de">Weili Tang</maintainer>
   <license>BSD</license>
 
+
+  <!-- Build tool dependency -->
   <buildtool_depend>catkin</buildtool_depend>
 
+  <!-- Build dependencies -->
   <build_depend>roscpp</build_depend>
   <build_depend>image_transport</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>tf2_ros</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>visualization_msgs</build_depend>
 
+  <!-- Execution dependencies -->
   <exec_depend>roscpp</exec_depend>
   <exec_depend>image_transport</exec_depend>
   <exec_depend>cv_bridge</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>visualization_msgs</exec_depend>
 
   <export>
     <!-- Other tools can request additional information be placed here -->
